fix layout overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
-  /* max-width: 1280px; */
+  max-width: 1280px;
   width: 100%;
   text-align: center;
+  padding: 0 1rem;
 }
